fixup!: docker host
Signed-off-by: Samuel K <69881238+skevetter@users.noreply.github.com>

--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -40,7 +40,9 @@ jobs:
           wsl.exe -l -v
           wsl.exe --set-default Ubuntu-24.04
 
-          # Set environment for subsequent steps
+          # Set environment for current session AND subsequent steps
+          $env:DOCKER_HOST = "tcp://127.0.0.1:2375"
+          $env:DOCKER_DEFAULT_PLATFORM = "linux/amd64"
           echo "DOCKER_HOST=tcp://127.0.0.1:2375" >> $env:GITHUB_ENV
           echo "DOCKER_DEFAULT_PLATFORM=linux/amd64" >> $env:GITHUB_ENV
 
