--- a/.github/workflows/commit.yml
+++ b/.github/workflows/commit.yml
@@ -12,6 +12,8 @@ jobs:
       contents: read
       pull-requests: write
     steps:
+      - uses: actions/checkout@v6
+
       - uses: 1Password/check-signed-commits-action@v1
 
-      - uses: opensource-nepal/commitlint@v1
+      - uses: wagoid/commitlint-github-action@v6
