--- a/.github/workflows/commit.yml
+++ b/.github/workflows/commit.yml
@@ -17,3 +17,5 @@ jobs:
       - uses: 1Password/check-signed-commits-action@v1
 
       - uses: wagoid/commitlint-github-action@v6
+        with:
+          failOnErrors: false
