fixup!: replace cache sha with runner id to avoid collisions
Signed-off-by: Samuel K <69881238+skevetter@users.noreply.github.com>

--- a/.github/actions/compile-linux-binary/action.yml
+++ b/.github/actions/compile-linux-binary/action.yml
@@ -44,4 +44,4 @@ runs:
       uses: actions/cache/save@v4
       with:
         path: ${{ inputs.binary-path }}
-        key: ${{ inputs.binary-cache-key }}-${{ github.sha }}
+        key: ${{ inputs.binary-cache-key }}-${{ github.run_id }}
