--- a/.github/actions/compile-windows-binary/action.yml
+++ b/.github/actions/compile-windows-binary/action.yml
@@ -34,5 +34,5 @@ runs:
       uses: actions/cache/save@v4
       with:
         path: ${{ inputs.binary-path }}
-        key: ${{ inputs.binary-cache-key }}-${{ github.sha }}
+        key: ${{ inputs.binary-cache-key }}-${{ github.run_id }}
         enableCrossOsArchive: true
