--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,6 +14,8 @@ jobs:
       original_package_version: ${{ steps.create-release.outputs.original_package_version }}
       release_id: ${{ steps.create-release.outputs.release_id }}
     steps:
+      - uses: actions/checkout@v6
+
       - uses: ./.github/actions/create-release
         id: create-release
 
