ci: add checkout step to release tasks
Signed-off-by: Samuel K <69881238+skevetter@users.noreply.github.com>

--- a/.github/workflows/devcontainer.yml
+++ b/.github/workflows/devcontainer.yml
@@ -2,6 +2,7 @@ name: Devcontainer
 
 on:
   push:
+    branches: [main]
     paths:
       - ".devcontainer/**"
       - ".github/workflows/devcontainer.yml"
