--- a/.github/workflows/cleanup-runs.yml
+++ b/.github/workflows/cleanup-runs.yml
@@ -1,4 +1,4 @@
-name: Cleanup Old Workflow Runs
+name: Cleanup Workflow Runs
 
 on:
   workflow_dispatch:
@@ -9,28 +9,9 @@ jobs:
     permissions:
       actions: write
     steps:
-      - uses: actions/github-script@v8
+      - uses: Mattraks/delete-workflow-runs@v2
         with:
-          script: |
-            const days = 2
-            const cutoff = new Date(Date.now() - days * 24 * 60 * 60 * 1000)
-
-            const runs = await github.paginate(github.rest.actions.listWorkflowRunsForRepo, {
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              per_page: 100
-            })
-
-            let deleted = 0
-            for (const run of runs) {
-              if (new Date(run.created_at) < cutoff) {
-                await github.rest.actions.deleteWorkflowRun({
-                  owner: context.repo.owner,
-                  repo: context.repo.repo,
-                  run_id: run.id
-                })
-                deleted++
-              }
-            }
-
-            console.log(`Deleted ${deleted} workflow runs older than ${days} days`)
+          token: ${{ github.token }}
+          repository: ${{ github.repository }}
+          retain_days: 2
+          keep_minimum_runs: 0
