--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -19,6 +19,58 @@ jobs:
           binary-cache-key: "test-binary-linux"
           binary-path: ./e2e/bin/devpod-linux-amd64
 
+  integration-test-all-linux:
+    name: Integration Tests All Linux
+    needs: [compile-linux]
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: read
+    steps:
+      - uses: jlumbroso/free-disk-space@v1.3.1
+
+      - uses: actions/checkout@v6
+
+      - name: Log in to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: restore cached binary
+        uses: actions/cache/restore@v4
+        with:
+          path: ./e2e/bin/devpod-linux-amd64
+          key: test-binary-linux-${{ github.run_id }}
+          fail-on-cache-miss: true
+          enableCrossOsArchive: true
+
+      - name: make binary executable
+        shell: bash
+        run: chmod +x ./e2e/bin/devpod-linux-amd64
+
+      - name: setup kind
+        uses: engineerd/setup-kind@v0.6.2
+        with:
+          version: "v0.24.0"
+          image: kindest/node:v1.34.0@sha256:7416a61b42b1662ca6ca89f02028ac133a309a2a30ba309614e8ec94d976dc5a
+
+      - name: run all tests
+        shell: bash
+        working-directory: ./e2e
+        env:
+          GH_USERNAME: ${{ secrets.GH_PRIVATE_REPO_USER_TEST }}
+          GH_ACCESS_TOKEN: ${{ secrets.GH_PRIVATE_REPO_TOKEN_TEST }}
+        run: |
+          sudo \
+            GH_USERNAME="${GH_USERNAME}" \
+            GH_ACCESS_TOKEN="${GH_ACCESS_TOKEN}" \
+            KUBECONFIG="${KUBECONFIG:-$HOME/.kube/config}" \
+            PATH="${PATH}" \
+            GOROOT="${GOROOT}" \
+            go test -v -ginkgo.v -timeout 3600s
+
   integration-test-wave-1:
     name: Integration Tests Wave 1
     needs: [compile-linux]
