--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -71,174 +71,174 @@ jobs:
             GOROOT="${GOROOT}" \
             go test -v -ginkgo.v -timeout 3600s
 
-  integration-test-wave-1:
-    name: Integration Tests Wave 1
-    needs: [compile-linux]
-    runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: read
-    strategy:
-      matrix:
-        label:
-          - context
-          - ide
-          - integration
-          - machine
-          - machineprovider
-          - provider
-          - ssh
-          - up-cleanup-fail
-          - up-cleanup-invalid
-          - up-docker-compose
-          - up-env-vars
-          - up-error-output
-          - up-git-commit
-          - up-git-private
-          - up-no-devcontainer
-          - up-podman
-          - up-recreate-local
-          - up-recreate-remote
-          - up-reset-remote
-          - up-subpath
+  # integration-test-wave-1:
+  #   name: Integration Tests Wave 1
+  #   needs: [compile-linux]
+  #   runs-on: ubuntu-latest
+  #   permissions:
+  #     contents: read
+  #     packages: read
+  #   strategy:
+  #     matrix:
+  #       label:
+  #         - context
+  #         - ide
+  #         - integration
+  #         - machine
+  #         - machineprovider
+  #         - provider
+  #         - ssh
+  #         - up-cleanup-fail
+  #         - up-cleanup-invalid
+  #         - up-docker-compose
+  #         - up-env-vars
+  #         - up-error-output
+  #         - up-git-commit
+  #         - up-git-private
+  #         - up-no-devcontainer
+  #         - up-podman
+  #         - up-recreate-local
+  #         - up-recreate-remote
+  #         - up-reset-remote
+  #         - up-subpath
 
-    steps:
-      - uses: actions/checkout@v6
+  #   steps:
+  #     - uses: actions/checkout@v6
 
-      - name: Log in to GitHub Container Registry
-        uses: docker/login-action@v3
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+  #     - name: Log in to GitHub Container Registry
+  #       uses: docker/login-action@v3
+  #       with:
+  #         registry: ghcr.io
+  #         username: ${{ github.actor }}
+  #         password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Run integration test
-        uses: ./.github/actions/run-integration-test
-        with:
-          label: ${{ matrix.label }}
-          needs-kind: false
-          gh-username: ${{ secrets.GH_PRIVATE_REPO_USER_TEST }}
-          gh-access-token: ${{ secrets.GH_PRIVATE_REPO_TOKEN_TEST }}
-          binary-cache-key: "test-binary-linux"
-          binary-path: ./e2e/bin/devpod-linux-amd64
+  #     - name: Run integration test
+  #       uses: ./.github/actions/run-integration-test
+  #       with:
+  #         label: ${{ matrix.label }}
+  #         needs-kind: false
+  #         gh-username: ${{ secrets.GH_PRIVATE_REPO_USER_TEST }}
+  #         gh-access-token: ${{ secrets.GH_PRIVATE_REPO_TOKEN_TEST }}
+  #         binary-cache-key: "test-binary-linux"
+  #         binary-path: ./e2e/bin/devpod-linux-amd64
 
-  integration-test-wave-2:
-    name: Integration Tests Wave 2
-    needs: [integration-test-wave-1]
-    runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: read
-    strategy:
-      matrix:
-        label:
-          - build
-          - up-docker
-          - up-docker-build
-          - up-docker-compose-build
-          - up-git-pr
-          - up-kubernetes
-        include:
-          - label: build
-            needs-kind: true
-          - label: up-kubernetes
-            needs-kind: true
+  # integration-test-wave-2:
+  #   name: Integration Tests Wave 2
+  #   needs: [integration-test-wave-1]
+  #   runs-on: ubuntu-latest
+  #   permissions:
+  #     contents: read
+  #     packages: read
+  #   strategy:
+  #     matrix:
+  #       label:
+  #         - build
+  #         - up-docker
+  #         - up-docker-build
+  #         - up-docker-compose-build
+  #         - up-git-pr
+  #         - up-kubernetes
+  #       include:
+  #         - label: build
+  #           needs-kind: true
+  #         - label: up-kubernetes
+  #           needs-kind: true
 
-    steps:
-      - uses: jlumbroso/free-disk-space@v1.3.1
+  #   steps:
+  #     - uses: jlumbroso/free-disk-space@v1.3.1
 
-      - uses: actions/checkout@v6
+  #     - uses: actions/checkout@v6
 
-      - name: Log in to GitHub Container Registry
-        uses: docker/login-action@v3
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+  #     - name: Log in to GitHub Container Registry
+  #       uses: docker/login-action@v3
+  #       with:
+  #         registry: ghcr.io
+  #         username: ${{ github.actor }}
+  #         password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Run integration test
-        uses: ./.github/actions/run-integration-test
-        with:
-          label: ${{ matrix.label }}
-          needs-kind: ${{ matrix.needs-kind || false }}
-          gh-username: ${{ secrets.GH_PRIVATE_REPO_USER_TEST }}
-          gh-access-token: ${{ secrets.GH_PRIVATE_REPO_TOKEN_TEST }}
-          binary-cache-key: "test-binary-linux"
-          binary-path: ./e2e/bin/devpod-linux-amd64
+  #     - name: Run integration test
+  #       uses: ./.github/actions/run-integration-test
+  #       with:
+  #         label: ${{ matrix.label }}
+  #         needs-kind: ${{ matrix.needs-kind || false }}
+  #         gh-username: ${{ secrets.GH_PRIVATE_REPO_USER_TEST }}
+  #         gh-access-token: ${{ secrets.GH_PRIVATE_REPO_TOKEN_TEST }}
+  #         binary-cache-key: "test-binary-linux"
+  #         binary-path: ./e2e/bin/devpod-linux-amd64
 
-  compile-windows:
-    name: Compile Windows Binary
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v6
+  # compile-windows:
+  #   name: Compile Windows Binary
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v6
 
-      - uses: ./.github/actions/compile-windows-binary
-        with:
-          cache-key-suffix: "test-windows"
-          binary-cache-key: "test-binary-windows"
-          binary-path: ./e2e/bin/devpod-windows-amd64.exe
+  #     - uses: ./.github/actions/compile-windows-binary
+  #       with:
+  #         cache-key-suffix: "test-windows"
+  #         binary-cache-key: "test-binary-windows"
+  #         binary-path: ./e2e/bin/devpod-windows-amd64.exe
 
-  # NOTE: Integration tests on Windows that pull images fail due to missing Windows images
-  # I tried setting up Vampire/setup-wsl@v6 but encountered issues with docker refusing
-  # to connect to the WSL2 backend from within the GitHub Actions Windows runner.
-  # example error:
-  # ```
-  # Inspecting image mcr.microsoft.com/devcontainers/go:1-bookworm
-  # mcr.microsoft.com/devcontainers/go:1-bookworm not found
-  # Pulling image mcr.microsoft.com/devcontainers/go:1-bookworm
-  # 1-bookworm: Pulling from devcontainers/go
-  # no matching manifest for windows/amd64 10.0.26100 in the manifest list entries
-  # exit status 1
-  # ```
-  integration-test-windows:
-    name: Integration Tests Windows
-    needs: [compile-windows]
-    runs-on: windows-latest
-    permissions:
-      contents: read
-      packages: read
-    strategy:
-      matrix:
-        label:
-          - context
-          - provider
-    steps:
-      - name: Free disk space
-        shell: pwsh
-        run: |
-          Get-PSDrive
-          Remove-Item -Path "C:\Program Files\Android" -Recurse -Force -ErrorAction SilentlyContinue
-          Remove-Item -Path "$env:LOCALAPPDATA\Android" -Recurse -Force -ErrorAction SilentlyContinue
-          Remove-Item -Path "C:\hostedtoolcache\windows\dotnet" -Recurse -Force -ErrorAction SilentlyContinue
-          Get-PSDrive
+  # # NOTE: Integration tests on Windows that pull images fail due to missing Windows images
+  # # I tried setting up Vampire/setup-wsl@v6 but encountered issues with docker refusing
+  # # to connect to the WSL2 backend from within the GitHub Actions Windows runner.
+  # # example error:
+  # # ```
+  # # Inspecting image mcr.microsoft.com/devcontainers/go:1-bookworm
+  # # mcr.microsoft.com/devcontainers/go:1-bookworm not found
+  # # Pulling image mcr.microsoft.com/devcontainers/go:1-bookworm
+  # # 1-bookworm: Pulling from devcontainers/go
+  # # no matching manifest for windows/amd64 10.0.26100 in the manifest list entries
+  # # exit status 1
+  # # ```
+  # integration-test-windows:
+  #   name: Integration Tests Windows
+  #   needs: [compile-windows]
+  #   runs-on: windows-latest
+  #   permissions:
+  #     contents: read
+  #     packages: read
+  #   strategy:
+  #     matrix:
+  #       label:
+  #         - context
+  #         - provider
+  #   steps:
+  #     - name: Free disk space
+  #       shell: pwsh
+  #       run: |
+  #         Get-PSDrive
+  #         Remove-Item -Path "C:\Program Files\Android" -Recurse -Force -ErrorAction SilentlyContinue
+  #         Remove-Item -Path "$env:LOCALAPPDATA\Android" -Recurse -Force -ErrorAction SilentlyContinue
+  #         Remove-Item -Path "C:\hostedtoolcache\windows\dotnet" -Recurse -Force -ErrorAction SilentlyContinue
+  #         Get-PSDrive
 
-      - uses: actions/checkout@v6
+  #     - uses: actions/checkout@v6
 
-      - name: Run integration test
-        uses: ./.github/actions/run-integration-test
-        with:
-          label: ${{ matrix.label }}
-          needs-kind: false
-          gh-username: ${{ secrets.GH_PRIVATE_REPO_USER_TEST }}
-          gh-access-token: ${{ secrets.GH_PRIVATE_REPO_TOKEN_TEST }}
-          binary-cache-key: "test-binary-windows"
-          binary-path: ./e2e/bin/devpod-windows-amd64.exe
+  #     - name: Run integration test
+  #       uses: ./.github/actions/run-integration-test
+  #       with:
+  #         label: ${{ matrix.label }}
+  #         needs-kind: false
+  #         gh-username: ${{ secrets.GH_PRIVATE_REPO_USER_TEST }}
+  #         gh-access-token: ${{ secrets.GH_PRIVATE_REPO_TOKEN_TEST }}
+  #         binary-cache-key: "test-binary-windows"
+  #         binary-path: ./e2e/bin/devpod-windows-amd64.exe
 
-  docker-install-test:
-    name: Docker Install Test
-    needs: [compile-linux]
-    runs-on: ubuntu-latest
-    steps:
-      - uses: jlumbroso/free-disk-space@v1.3.1
+  # docker-install-test:
+  #   name: Docker Install Test
+  #   needs: [compile-linux]
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: jlumbroso/free-disk-space@v1.3.1
 
-      - uses: actions/checkout@v6
+  #     - uses: actions/checkout@v6
 
-      - uses: ./.github/actions/docker-install-test
+  #     - uses: ./.github/actions/docker-install-test
 
-  user-interface-test:
-    name: User Interface Test
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v6
+  # user-interface-test:
+  #   name: User Interface Test
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v6
 
-      - uses: ./.github/actions/build-user-interface
+  #     - uses: ./.github/actions/build-user-interface
