fixup!: run docker install test last
Signed-off-by: Samuel K <69881238+skevetter@users.noreply.github.com>

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -156,7 +156,7 @@ jobs:
 
   docker-install-test:
     name: Docker Install Test
-    needs: [compile-linux]
+    needs: [compile-linux, integration-test-wave-1, integration-test-wave-2]
     runs-on: ubuntu-latest
     steps:
       - uses: jlumbroso/free-disk-space@v1.3.1
