chore(renovate): auto merge go dependencies
Signed-off-by: Samuel K <69881238+skevetter@users.noreply.github.com>

--- a/renovate.json
+++ b/renovate.json
@@ -7,5 +7,11 @@
   "pre-commit": {
     "enabled": true
   },
-  "dependencyDashboard": false
+  "dependencyDashboard": false,
+  "packageRules": [
+    {
+      "matchManagers": ["gomod"],
+      "automerge": true
+    }
+  ]
 }
